--- a/index.html
+++ b/index.html
@@ -1,49 +1,57 @@
 <html>
 <head>
-	<style>
+<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">	
+<style>
 		body{
-			color: white;
+			color: black;
 		}
 		.box{
 			width: 21%;
 			margin: 2%;
 			float: left;
-			background: #54B3F7;
+			xbackground: #54B3F7;
+			border: 1px solid black;
 		}
 		@media (max-width: 980px){
 			.box{
 				width: 96%;
 			}
 		}
+		
+		.bar{
+			color: white;
+
+		}
+		
 	</style>
 </head>
 <body>
 	<div class="box">
 		<h1>Senate (Merkley v. Wehby)</h1>
 		<div class="sen_data">
-			<div class="sen_1"></div>
-			<div class="sen_2"></div>
+			<div class="sen_1 bar"></div>
+			<div class="sen_2 bar"></div>
 		</div>
 	</div>
 	<div class="box">
 		<h1>Governor (Kitzhaber v. Richardson)</h1>
 		<div class="gov_data">
-			<div class="gov_1"></div>
-			<div class="gov_2"></div>
+			<div class="gov_1 bar"></div>
+			<div class="gov_2 bar"></div>
 		</div>
 	</div>
 	<div class="box">
 		<h1>Recreational marijuana (#91)</h1>
 		<div class="mj_data">
-			<div class="mj_1"></div>
-			<div class="mj_2"></div>
+			<div class="mj_1 bar"></div>
+			<div class="mj_2 bar"></div>
 		</div>
 	</div>
 	<div class="box">
 		<h1>Driver licenses for non-citizens (#88)</h1>
 		<div class="id_data">
-			<div class="id_1"></div>
-			<div class="id_2"></div>
+			<div class="id_1 bar"></div>
+			<div class="id_2 bar"></div>
 		</div>
 	</div>
 	
@@ -71,6 +79,33 @@
 		var sen_Wehb_p = ((sen_Wehb/sen_total)*100);
 		var sen_Wehb_r = d3.round(sen_Wehb_p, 2);
 		
+		var gov_total = data.gov.Kitzhaber+data.gov.Richardson;
+		var gov_Kitz = data.gov.Kitzhaber;
+		var gov_Kitz_p = ((gov_Kitz/gov_total)*100);
+		var gov_Kitz_r = d3.round(gov_Kitz_p, 2);
+		console.log(gov_Kitz_r);
+		var gov_Rich = data.gov.Richardson;
+		var gov_Rich_p = ((gov_Rich/gov_total)*100);
+		var gov_Rich_r = d3.round(gov_Rich_p, 2);
+		
+		var mj_total = data.mj.Yes+data.mj.No;
+		var mj_yes = data.mj.Yes;
+		var mj_yes_p = ((mj_yes/mj_total)*100);
+		var mj_yes_r = d3.round(mj_yes_p, 2);
+		console.log(mj_yes_r);
+		var mj_no = data.mj.No;
+		var mj_no_p = ((mj_no/mj_total)*100);
+		var mj_no_r = d3.round(mj_no_p, 2);
+		
+		var id_total = data.id.Yes+data.id.No;
+		var id_yes = data.id.Yes;
+		var id_yes_p = ((id_yes/id_total)*100);
+		var id_yes_r = d3.round(id_yes_p, 2);
+		console.log(id_yes_r);
+		var id_no = data.id.No;
+		var id_no_p = ((id_no/id_total)*100);
+		var id_no_r = d3.round(id_no_p, 2);
+		
 		d3.select(".sen_1")
 			.append("div")
 			.style("width", (sen_Merk_p)+"%")
@@ -85,39 +120,39 @@
 			
 		d3.select(".gov_1")
 			.append("div")
-			.style("width", ((data.gov.Kitzhaber/(data.gov.Kitzhaber+data.gov.Richardson))*100)+"%")
+			.style("width", (gov_Kitz_p)+"%")
 			.style("background", "black")
-			.text("Kitzhaber: " + ((data.gov.Kitzhaber/(data.gov.Kitzhaber+data.gov.Richardson))*100) + "% votes");
+			.text("Kitzhaber: " + (gov_Kitz_r) + "% votes");
 		
 		d3.select(".gov_2")
 			.append("div")
-			.style("width", ((data.gov.Richardson/(data.gov.Kitzhaber+data.gov.Richardson))*100)+"%")
+			.style("width", (gov_Rich_p)+"%")
 			.style("background", "black")
-			.text("Richardson: " + ((data.gov.Richardson/(data.gov.Kitzhaber+data.gov.Richardson))*100) + "% votes");
+			.text("Richardson: " + (gov_Rich_r) + "% votes");
 		
 		d3.select(".mj_1")
 			.append("div")
-			.style("width", ((data.mj.Yes/(data.mj.Yes+data.mj.No))*100)+"%")
+			.style("width", mj_yes_p +"%")
 			.style("background", "black")
-			.text("Yes: " + ((data.mj.Yes/(data.mj.Yes+data.mj.No))*100) + "% votes");
+			.text("Yes: " + mj_yes_r + "% votes");
 		
 		d3.select(".mj_2")
 			.append("div")
-			.style("width", ((data.mj.No/(data.mj.Yes+data.mj.No))*100)+"%")
+			.style("width", mj_no_p +"%")
 			.style("background", "black")
-			.text("No: " + ((data.mj.No/(data.mj.Yes+data.mj.No))*100) + "% votes");
+			.text("No: " + mj_no_r + "% votes");
 			
 		d3.select(".id_1")
 			.append("div")
-			.style("width", ((data.id.Yes/(data.id.Yes+data.id.No))*100)+"%")
+			.style("width", id_yes_p +"%")
 			.style("background", "black")
-			.text("Yes: " + ((data.id.Yes/(data.id.Yes+data.id.No))*100) + "% votes");
+			.text("Yes: " + id_yes_r + "% votes");
 		
 		d3.select(".id_2")
 			.append("div")
-			.style("width", ((data.id.No/(data.id.Yes+data.id.No))*100)+"%")
+			.style("width", id_no_p +"%")
 			.style("background", "black")
-			.text("No: " + ((data.id.No/(data.id.Yes+data.id.No))*100) + "% votes");
+			.text("No: " + id_no_r + "% votes");
 		
 
 		
